--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -103,40 +103,9 @@
    },
    "cell_type": "code",
    "source": [
-    "# SYSTEM_MSG = \"\"\"You are a culinary data annotator. Convert free-text ingredient strings into a deduplicated list of base ingredients.\n",
-    "#\n",
-    "# Normalization rules:\n",
-    "# - Keep only ingredient names (no quantities, units, sizes, brands, preparation steps, or descriptors).\n",
-    "# - Singular, lowercase (e.g., \"tomatoes\" → \"tomato\").\n",
-    "# - Strip vague phrases like \"to taste\", \"as needed\".\n",
-    "# - Collapse obvious synonyms to common pantry terms (e.g., \"margarine\" → \"butter\", \"self-rising flour\" → \"flour\").\n",
-    "# - Preserve distinct *product variants* when the modifier changes the flavor type or product identity (e.g., \"ranch dressing\", \"italian dressing\", \"soy sauce\", \"beef broth\", \"smoked paprika\").\n",
-    "# - But IGNORE purely descriptive or marketing adjectives such as “zesty”, “creamy”, “original”, “classic”, “deluxe”, “fancy”, “reduced-fat”, etc.\n",
-    "# - If an item is a compound product (e.g., \"cream of chicken soup\"), keep the product name intact (\"cream of chicken soup\").\n",
-    "# - Deduplicate. Output the canonical short form that captures the true flavor/type distinction but omits marketing fluff.\n",
-    "#\n",
-    "# Output format:\n",
-    "# Return ONLY valid JSON. No prose. No code fences.\n",
-    "# For a single input: [\"ingredient1\", \"ingredient2\", ...]\n",
-    "# \"\"\"\n",
-    "SYSTEM_MSG = \"\"\"You are a culinary data annotator. Convert free-text ingredient strings into a deduplicated list of base ingredients.\n",
-    "\n",
-    "Normalization rules:\n",
-    "- Keep only ingredient names (no quantities, units, sizes, brands, preparation steps, or descriptors).\n",
-    "- Singular, lowercase (e.g., \"tomatoes\" → \"tomato\").\n",
-    "- Strip vague/marketing adjectives: “zesty”, “creamy”, “original”, “classic”, “deluxe”, “fancy”, “reduced-fat”, etc.\n",
-    "- Preserve true flavor/type distinctions (e.g., \"ranch dressing\", \"italian dressing\", \"soy sauce\", \"beef broth\", \"smoked paprika\").\n",
-    "- **Differentiate mixes vs. dressings:**\n",
-    "  - If the phrase ends with **\"dressing\"** or **\"vinaigrette\"**, treat it as a **dressing** and keep the flavor/type (e.g., \"italian dressing\", \"ranch dressing\").\n",
-    "  - If the phrase contains **\"salad mix\"**, **\"spring mix\"**, **\"mixed greens\"**, or **\"coleslaw mix\"**, treat it as a **greens/vegetable mix** (not a dressing). Normalize marketing adjectives away (e.g., \"italian salad mix\" → \"salad mix\", \"zesty spring mix\" → \"spring mix\").\n",
-    "- Keep common spice/herb **seasoning blends** distinct from dressings and mixes (e.g., \"italian seasoning\", \"taco seasoning\", \"ranch seasoning\") and do not convert them to dressings.\n",
-    "- For compound products, keep the product intact (e.g., \"cream of chicken soup\").\n",
-    "- Deduplicate. Output the shortest specific name that preserves real type distinctions.\n",
-    "\n",
-    "Output format:\n",
-    "Return ONLY valid JSON array of strings. No prose. No code fences.\n",
-    "Example: [\"chicken\",\"italian dressing\",\"salad mix\",\"olive oil\"]\n",
-    "\"\"\""
+    "# Load Prompts\n",
+    "with open(\"prompts/prompt_ingredients.txt\", \"r\") as f:\n",
+    "    SYSTEM_MSG_INGREDIENTS = f.read()"
    ],
    "id": "4a9591b521c59282",
    "outputs": [],
@@ -177,7 +146,7 @@
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": SYSTEM_MSG},\n",
+    "            {\"role\": \"system\", \"content\": SYSTEM_MSG_INGREDIENTS},\n",
     "            {\"role\": \"user\", \"content\": user_msg},\n",
     "        ],\n",
     "        max_tokens=400,\n",
@@ -195,7 +164,7 @@
     "        response2 = client.chat.completions.create(\n",
     "            model=\"gpt-4o-mini\",\n",
     "            messages=[\n",
-    "                {\"role\": \"system\", \"content\": SYSTEM_MSG},\n",
+    "                {\"role\": \"system\", \"content\": SYSTEM_MSG_INGREDIENTS},\n",
     "                {\"role\": \"user\", \"content\": repair_msg},\n",
     "            ],\n",
     "            max_tokens=400,\n",
