updated user message and repair

--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -133,23 +133,21 @@
     "\n",
     "\n",
     "def extract_ingredients(description):\n",
-    "    # guard for NaN\n",
-    "    if description is None:\n",
-    "        return []\n",
-    "    # guard for empty\n",
+    "    if description is None: return []  # guard for NaN\n",
     "    text = str(description).strip()\n",
-    "    if not text:\n",
-    "        return []\n",
+    "    if not text: return []  # guard for empty\n",
     "    # reinforce JSON-only on the user message\n",
     "    user_msg = f\"\"\"Input: {text}\n",
-    "Return ONLY a JSON array of deduplicated base ingredients in lowercase, e.g. [\"chicken\",\"butter\"].\"\"\"\n",
+    "Return ONLY a valid JSON array of lowercase ingredient names, no explanations, no code fences.\n",
+    "Example: [\"chicken\",\"butter\"]\"\"\"\n",
+    "\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": SYSTEM_MSG_INGREDIENTS},\n",
     "            {\"role\": \"user\", \"content\": user_msg},\n",
     "        ],\n",
-    "        max_tokens=400,\n",
+    "        max_tokens=600,\n",
     "        temperature=0,\n",
     "    )\n",
     "    content = response.choices[0].message.content\n",
@@ -158,7 +156,8 @@
     "        parsed = json.loads(content)\n",
     "    except json.JSONDecodeError:\n",
     "        repair_msg = f\"\"\"Your previous response was not valid JSON.\n",
-    "Return ONLY a JSON array of strings, no explanation.\n",
+    "Return ONLY a valid JSON array of strings, no explanations, no code fences.\n",
+    "Example: [\"chicken\",\"butter\"]\n",
     "\n",
     "Input: {text}\"\"\"\n",
     "        response2 = client.chat.completions.create(\n",
@@ -167,20 +166,19 @@
     "                {\"role\": \"system\", \"content\": SYSTEM_MSG_INGREDIENTS},\n",
     "                {\"role\": \"user\", \"content\": repair_msg},\n",
     "            ],\n",
-    "            max_tokens=400,\n",
+    "            max_tokens=600,\n",
     "            temperature=0,\n",
     "        )\n",
     "        content = response2.choices[0].message.content\n",
-    "        # check if it worked\n",
     "        try:\n",
     "            parsed = json.loads(content)\n",
     "        except json.JSONDecodeError:\n",
-    "            # give up gracefully\n",
-    "            return []\n",
-    "    # normalize shape\n",
+    "            return []  # give up gracefully if still invalid\n",
+    "\n",
+    "    # Normalize shape\n",
     "    if isinstance(parsed, list):\n",
     "        return _deduplicate_preserve_order([str(x) for x in parsed])\n",
-    "    # if model returned an object (shouldn't for single row), flatten values\n",
+    "    # # Flatten if model returned an object (shouldn’t for single row)\n",
     "    if isinstance(parsed, dict):\n",
     "        flat = []\n",
     "        for v in parsed.values():\n",
@@ -208,9 +206,9 @@
    "source": [
     "# CSV can’t store native Python lists (they are objects), so use JSON dump\n",
     "ingredients_table = pd.DataFrame({\n",
-    "    \"ingredients_raw\": food_kg_df[\"ingredients\"],\n",
+    "    \"id\": food_kg_df[\"id\"],\n",
+    "    # \"ingredients_raw\": food_kg_df[\"ingredients\"],\n",
     "    \"ingredients_normalized\": food_kg_df[\"ingredients_normalized\"].apply(json.dumps),\n",
-    "    # \"ner\": food_kg_df[\"ner\"],\n",
     "})\n",
     "# Create directory if it doesn't exist and save\n",
     "os.makedirs(\"ingredients\", exist_ok=True)\n",
