is 'pork chop' a valid ingredient? check products

--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:47.278761Z",
-     "start_time": "2025-10-23T04:32:47.268290Z"
+     "end_time": "2025-11-06T00:12:25.248448Z",
+     "start_time": "2025-11-06T00:12:25.228300Z"
     }
    },
    "source": [
@@ -33,13 +33,13 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:47.288529Z",
-     "start_time": "2025-10-23T04:32:47.284585Z"
+     "end_time": "2025-11-06T00:12:25.256846Z",
+     "start_time": "2025-11-06T00:12:25.253469Z"
     }
    },
    "cell_type": "code",
@@ -55,67 +55,35 @@
        "['id', 'title', 'ingredients', 'directions', 'link', 'source', 'ner']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:47.299310Z",
-     "start_time": "2025-10-23T04:32:47.296782Z"
+     "end_time": "2025-11-06T00:12:25.263607Z",
+     "start_time": "2025-11-06T00:12:25.262063Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "ingredients = food_kg_df['ner']\n",
-    "ingredients.head(5)"
-   ],
-   "id": "db91b53d7596ef51",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    {potatoes,purple onion,white wine vinegar,chiv...\n",
-       "1    {rotini,Italian salad mix,Italian dressing,cuc...\n",
-       "2    {yams,egg,onion,tomato,green chile,bread crumb...\n",
-       "3       {pork chops,apples,brown sugar,cinnamon,flour}\n",
-       "4    {linguini,oil,peanut butter,chili powder,Tabas...\n",
-       "Name: ner, dtype: object"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 22
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:47.328532Z",
-     "start_time": "2025-10-23T04:32:47.326559Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# Load Prompts\n",
-    "with open(\"prompts/prompt_ingredients.txt\", \"r\") as f:\n",
+    "# Load System Prompt\n",
+    "with open(\"prompts/system_message_ingredients.txt\", \"r\") as f:\n",
     "    SYSTEM_MSG_INGREDIENTS = f.read()"
    ],
    "id": "4a9591b521c59282",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:52.370460Z",
-     "start_time": "2025-10-23T04:32:47.357577Z"
+     "end_time": "2025-11-06T00:12:32.603266Z",
+     "start_time": "2025-11-06T00:12:25.268346Z"
     }
    },
    "cell_type": "code",
@@ -193,13 +161,13 @@
    ],
    "id": "2024df0b9cd294e8",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:52.395669Z",
-     "start_time": "2025-10-23T04:32:52.391773Z"
+     "end_time": "2025-11-06T00:12:32.619360Z",
+     "start_time": "2025-11-06T00:12:32.615940Z"
     }
    },
    "cell_type": "code",
@@ -216,13 +184,13 @@
    ],
    "id": "f05817a977a60f2e",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:52.405409Z",
-     "start_time": "2025-10-23T04:32:52.401450Z"
+     "end_time": "2025-11-06T00:12:32.629785Z",
+     "start_time": "2025-11-06T00:12:32.626234Z"
     }
    },
    "cell_type": "code",
@@ -232,19 +200,12 @@
     {
      "data": {
       "text/plain": [
-       "                                     ingredients_raw  \\\n",
-       "0  {2 c. cubed red potatoes,2 Tbsp. finely choppe...   \n",
-       "1  {12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...   \n",
-       "2  {1 1/2 lb. yams,1 egg,1 chopped onion,1 choppe...   \n",
-       "3  {pork chops,apples,brown sugar,cinnamon,\"flour...   \n",
-       "4  {1 lb. linguini,2 Tbsp. oil,3 Tbsp. peanut but...   \n",
-       "\n",
-       "                              ingredients_normalized  \n",
-       "0  [\"potato\", \"onion\", \"vinegar\", \"chive\", \"olive...  \n",
-       "1  [\"rotini\", \"salad mix\", \"italian dressing\", \"c...  \n",
-       "2  [\"yam\", \"egg\", \"onion\", \"tomato\", \"green chile...  \n",
-       "3  [\"apples\", \"brown sugar\", \"cinnamon\", \"flour\",...  \n",
-       "4  [\"linguini\", \"oil\", \"peanut butter\", \"chili po...  "
+       "       id                             ingredients_normalized\n",
+       "0  551171  [\"potato\", \"onion\", \"vinegar\", \"chive\", \"olive...\n",
+       "1  551172  [\"rotini\", \"salad mix\", \"italian dressing\", \"c...\n",
+       "2  551173  [\"yam\", \"egg\", \"onion\", \"tomato\", \"green chile...\n",
+       "3  551174  [\"pork chop\", \"apple\", \"brown sugar\", \"cinnamo...\n",
+       "4  551175  [\"linguini\", \"oil\", \"peanut butter\", \"chili po..."
       ],
       "text/html": [
        "<div>\n",
@@ -265,34 +226,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ingredients_raw</th>\n",
+       "      <th>id</th>\n",
        "      <th>ingredients_normalized</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{2 c. cubed red potatoes,2 Tbsp. finely choppe...</td>\n",
+       "      <td>551171</td>\n",
        "      <td>[\"potato\", \"onion\", \"vinegar\", \"chive\", \"olive...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>{12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...</td>\n",
+       "      <td>551172</td>\n",
        "      <td>[\"rotini\", \"salad mix\", \"italian dressing\", \"c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>{1 1/2 lb. yams,1 egg,1 chopped onion,1 choppe...</td>\n",
+       "      <td>551173</td>\n",
        "      <td>[\"yam\", \"egg\", \"onion\", \"tomato\", \"green chile...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>{pork chops,apples,brown sugar,cinnamon,\"flour...</td>\n",
-       "      <td>[\"apples\", \"brown sugar\", \"cinnamon\", \"flour\",...</td>\n",
+       "      <td>551174</td>\n",
+       "      <td>[\"pork chop\", \"apple\", \"brown sugar\", \"cinnamo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>{1 lb. linguini,2 Tbsp. oil,3 Tbsp. peanut but...</td>\n",
+       "      <td>551175</td>\n",
        "      <td>[\"linguini\", \"oil\", \"peanut butter\", \"chili po...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -300,18 +261,18 @@
        "</div>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:52.441740Z",
-     "start_time": "2025-10-23T04:32:52.437113Z"
+     "end_time": "2025-11-06T00:12:32.642361Z",
+     "start_time": "2025-11-06T00:12:32.638270Z"
     }
    },
    "cell_type": "code",
@@ -326,19 +287,12 @@
     {
      "data": {
       "text/plain": [
-       "                                     ingredients_raw  \\\n",
-       "0  {2 c. cubed red potatoes,2 Tbsp. finely choppe...   \n",
-       "1  {12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...   \n",
-       "2  {1 1/2 lb. yams,1 egg,1 chopped onion,1 choppe...   \n",
-       "3  {pork chops,apples,brown sugar,cinnamon,\"flour...   \n",
-       "4  {1 lb. linguini,2 Tbsp. oil,3 Tbsp. peanut but...   \n",
-       "\n",
-       "                              ingredients_normalized  \n",
-       "0  [potato, onion, vinegar, chive, olive oil, sug...  \n",
-       "1  [rotini, salad mix, italian dressing, cucumber...  \n",
-       "2  [yam, egg, onion, tomato, green chile, bread c...  \n",
-       "3  [apples, brown sugar, cinnamon, flour, pork, s...  \n",
-       "4  [linguini, oil, peanut butter, chili powder, t...  "
+       "       id                             ingredients_normalized\n",
+       "0  551171  [potato, onion, vinegar, chive, olive oil, sug...\n",
+       "1  551172  [rotini, salad mix, italian dressing, cucumber...\n",
+       "2  551173  [yam, egg, onion, tomato, green chile, bread c...\n",
+       "3  551174  [pork chop, apple, brown sugar, cinnamon, flou...\n",
+       "4  551175  [linguini, oil, peanut butter, chili powder, t..."
       ],
       "text/html": [
        "<div>\n",
@@ -359,34 +313,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ingredients_raw</th>\n",
+       "      <th>id</th>\n",
        "      <th>ingredients_normalized</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{2 c. cubed red potatoes,2 Tbsp. finely choppe...</td>\n",
+       "      <td>551171</td>\n",
        "      <td>[potato, onion, vinegar, chive, olive oil, sug...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>{12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...</td>\n",
+       "      <td>551172</td>\n",
        "      <td>[rotini, salad mix, italian dressing, cucumber...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>{1 1/2 lb. yams,1 egg,1 chopped onion,1 choppe...</td>\n",
+       "      <td>551173</td>\n",
        "      <td>[yam, egg, onion, tomato, green chile, bread c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>{pork chops,apples,brown sugar,cinnamon,\"flour...</td>\n",
-       "      <td>[apples, brown sugar, cinnamon, flour, pork, s...</td>\n",
+       "      <td>551174</td>\n",
+       "      <td>[pork chop, apple, brown sugar, cinnamon, flou...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>{1 lb. linguini,2 Tbsp. oil,3 Tbsp. peanut but...</td>\n",
+       "      <td>551175</td>\n",
        "      <td>[linguini, oil, peanut butter, chili powder, t...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -394,18 +348,18 @@
        "</div>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 27
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:32:52.512200Z",
-     "start_time": "2025-10-23T04:32:52.510898Z"
+     "end_time": "2025-11-06T00:12:32.715317Z",
+     "start_time": "2025-11-06T00:12:32.714195Z"
     }
    },
    "cell_type": "code",
