reorganization and ipynb created

--- a/old/llm-cleaning.ipynb
+++ b/old/llm-cleaning.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "code",
    "source": [
     "# Load System Prompt\n",
-    "with open(\"prompts/system_message_ingredients.txt\", \"r\") as f:\n",
+    "with open(\"../prompts/system_message_ingredients.txt\", \"r\") as f:\n",
     "    SYSTEM_MSG_INGREDIENTS = f.read()"
    ],
    "id": "4a9591b521c59282",
