--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:11:04.215495Z",
-     "start_time": "2025-11-06T05:10:59.758509Z"
+     "end_time": "2025-11-06T05:20:58.857130Z",
+     "start_time": "2025-11-06T05:20:54.323822Z"
     }
    },
    "cell_type": "code",
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:11:04.847599Z",
-     "start_time": "2025-11-06T05:11:04.220502Z"
+     "end_time": "2025-11-06T05:20:59.484525Z",
+     "start_time": "2025-11-06T05:20:58.861663Z"
     }
    },
    "source": [
@@ -67,18 +67,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:11:05.188834Z",
-     "start_time": "2025-11-06T05:11:04.851214Z"
+     "end_time": "2025-11-06T05:20:59.851662Z",
+     "start_time": "2025-11-06T05:20:59.490007Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Credentials\n",
-    "host = \"awesome-hw.sdsc.edu\"\n",
-    "port = 5432\n",
-    "database = \"nourish\"\n",
-    "user = \"akrish\"  # given this by TA\n",
-    "password = \"dse203#2025\"  # PostgreSQL password\n",
+    "host = os.getenv(\"POSTGRES_HOST\")\n",
+    "port = os.getenv(\"POSTGRES_PORT\")\n",
+    "database = os.getenv(\"POSTGRES_DATABASE\")\n",
+    "user = os.getenv(\"POSTGRES_USER\")\n",
+    "password = os.getenv(\"POSTGRES_PASSWORD\")\n",
     "# Create the connection engine\n",
     "engine = create_engine(f\"postgresql+psycopg2://{user}:{password}@{host}:{port}/{database}\")\n",
     "# Test the connection\n",
@@ -103,8 +103,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:11:05.364866Z",
-     "start_time": "2025-11-06T05:11:05.195099Z"
+     "end_time": "2025-11-06T05:21:00.050530Z",
+     "start_time": "2025-11-06T05:20:59.864245Z"
     }
    },
    "cell_type": "code",
@@ -982,8 +982,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:11:05.679433Z",
-     "start_time": "2025-11-06T05:11:05.446683Z"
+     "end_time": "2025-11-06T05:21:00.283046Z",
+     "start_time": "2025-11-06T05:21:00.058241Z"
     }
    },
    "cell_type": "code",
