--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -7,12 +7,7 @@
    "id": "5bcd2d4a58af6727"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T05:39:38.909784Z",
-     "start_time": "2025-11-06T05:39:34.807388Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "!pip install --upgrade pip -q\n",
@@ -40,8 +35,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:39:39.556008Z",
-     "start_time": "2025-11-06T05:39:38.914679Z"
+     "end_time": "2025-11-06T06:08:19.343565Z",
+     "start_time": "2025-11-06T06:08:18.644260Z"
     }
    },
    "source": [
@@ -52,7 +47,7 @@
     "from dotenv import load_dotenv\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "from util import process_foodkg_in_batches\n",
+    "from util import get_food_kg\n",
     "\n",
     "load_dotenv()  # Take environment variables from .env\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
@@ -69,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:39:39.896991Z",
-     "start_time": "2025-11-06T05:39:39.561093Z"
+     "end_time": "2025-11-06T06:08:19.684579Z",
+     "start_time": "2025-11-06T06:08:19.348084Z"
     }
    },
    "cell_type": "code",
@@ -105,8 +100,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:39:40.018682Z",
-     "start_time": "2025-11-06T05:39:39.908911Z"
+     "end_time": "2025-11-06T06:08:19.806725Z",
+     "start_time": "2025-11-06T06:08:19.696320Z"
     }
    },
    "cell_type": "code",
@@ -255,25 +250,32 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:43:49.306161Z",
-     "start_time": "2025-11-06T05:39:40.049554Z"
+     "end_time": "2025-11-06T06:08:20.279819Z",
+     "start_time": "2025-11-06T06:08:19.812101Z"
     }
    },
    "cell_type": "code",
-   "source": "process_foodkg_in_batches(engine, batch_size=1000, CUTOFF=1000, process_fn=lambda: print(\"processing\"))",
+   "source": "get_food_kg(engine, batch_size=500)",
    "id": "c7e3651e469b678b",
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "<lambda>() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[5], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m process_foodkg_in_batches(engine, batch_size\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m, CUTOFF\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m, process_fn\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mlambda\u001B[39;00m: \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mprocessing\u001B[39m\u001B[38;5;124m\"\u001B[39m))\n",
-      "File \u001B[0;32m~/dse203/food-knowledge-graph/util.py:68\u001B[0m, in \u001B[0;36mprocess_foodkg_in_batches\u001B[0;34m(engine, batch_size, columns, process_fn, CUTOFF)\u001B[0m\n\u001B[1;32m     66\u001B[0m     \u001B[38;5;28;01mbreak\u001B[39;00m\n\u001B[1;32m     67\u001B[0m \u001B[38;5;66;03m# process batch\u001B[39;00m\n\u001B[0;32m---> 68\u001B[0m process_fn(chunk)\n\u001B[1;32m     69\u001B[0m \u001B[38;5;66;03m# advance checkpoint\u001B[39;00m\n\u001B[1;32m     70\u001B[0m last_id \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mint\u001B[39m(chunk[ID_COL]\u001B[38;5;241m.\u001B[39miloc[\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m])\n",
-      "\u001B[0;31mTypeError\u001B[0m: <lambda>() takes 0 positional arguments but 1 was given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n",
+      "500\n",
+      "500\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1500"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "execution_count": 5
@@ -281,8 +283,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T05:43:49.320733Z",
-     "start_time": "2025-11-06T05:21:00.058241Z"
+     "end_time": "2025-11-06T06:08:20.499665Z",
+     "start_time": "2025-11-06T06:08:20.286377Z"
     }
    },
    "cell_type": "code",
@@ -296,12 +298,12 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[5], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m bifff\n",
+      "Cell \u001B[0;32mIn[6], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m bifff\n",
       "\u001B[0;31mNameError\u001B[0m: name 'bifff' is not defined"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
