--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -322,16 +322,9 @@
    "source": [
     "# Load System Prompt\n",
     "with open(\"../prompts/system_message_ingredients.txt\", \"r\") as f:\n",
-    "    SYSTEM_MSG_INGREDIENTS = f.read()"
-   ],
-   "id": "4a9591b521c59282",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
+    "    SYSTEM_MSG_INGREDIENTS = f.read()\n",
+    "\n",
+    "\n",
     "def _deduplicate_preserve_order(items):\n",
     "    # Post processing step to remove duplicate entries\n",
     "    # [\"salt\", \"salt\", \"SALT\"] => [\"salt\"]\n",
@@ -397,15 +390,22 @@
     "            if isinstance(v, list):\n",
     "                flat.extend([str(x) for x in v])\n",
     "        return _deduplicate_preserve_order(flat)\n",
-    "    return []\n",
-    "\n",
-    "\n",
-    "# apply function to ingredients column\n",
-    "food_kg_df[\"ingredients_normalized\"] = food_kg_df[\"ingredients\"].apply(extract_ingredients)"
+    "    return []"
    ],
    "id": "2024df0b9cd294e8",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# apply function to ingredients column\n",
+    "food_kg_df[\"ingredients_normalized\"] = food_kg_df[\"ingredients\"].apply(extract_ingredients)"
+   ],
+   "id": "c6e19a0132c62306"
   },
   {
    "metadata": {},
