tail to see its sorted

--- a/retrieve_food_kg.ipynb
+++ b/retrieve_food_kg.ipynb
@@ -406,6 +406,96 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T17:08:44.253282Z",
+     "start_time": "2025-11-06T17:08:44.246618Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "filtered_df.tail(5)  # note ids are sorted",
+   "id": "48722f4de0d0de2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "              id                                        ingredients\n",
+       "279      2231137  [1/2 cup chocolate hazelnut spread (recommende...\n",
+       "1948712  2231138  [1 dozen eggs, 1 paprika, 1 salt and pepper to...\n",
+       "1948713  2231139  [150 grams Daikon radish, 1 tbsp Sesame oil, 1...\n",
+       "1948714  2231140  [1 cup apple cider, 6 tablespoons sugar, 4 tab...\n",
+       "1948716  2231141  [1 pound ground veal, 1/2 pound sweet Italian ..."
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ingredients</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>279</th>\n",
+       "      <td>2231137</td>\n",
+       "      <td>[1/2 cup chocolate hazelnut spread (recommende...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948712</th>\n",
+       "      <td>2231138</td>\n",
+       "      <td>[1 dozen eggs, 1 paprika, 1 salt and pepper to...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948713</th>\n",
+       "      <td>2231139</td>\n",
+       "      <td>[150 grams Daikon radish, 1 tbsp Sesame oil, 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948714</th>\n",
+       "      <td>2231140</td>\n",
+       "      <td>[1 cup apple cider, 6 tablespoons sugar, 4 tab...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948716</th>\n",
+       "      <td>2231141</td>\n",
+       "      <td>[1 pound ground veal, 1/2 pound sweet Italian ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "a638849d0171c4e1"
   }
  ],
  "metadata": {
