--- a/retrieve_food_product.ipynb
+++ b/retrieve_food_product.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:39:21.698187Z",
-     "start_time": "2025-11-06T16:39:21.696014Z"
+     "end_time": "2025-11-06T17:58:32.578391Z",
+     "start_time": "2025-11-06T17:58:32.576312Z"
     }
    },
    "cell_type": "code",
@@ -21,14 +21,14 @@
    ],
    "id": "8565f315e8ce74cb",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 17
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:16:53.425607Z",
-     "start_time": "2025-11-06T17:16:53.002540Z"
+     "end_time": "2025-11-06T17:58:32.595498Z",
+     "start_time": "2025-11-06T17:58:32.591540Z"
     }
    },
    "cell_type": "code",
@@ -49,18 +49,18 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:16:55.091793Z",
-     "start_time": "2025-11-06T17:16:54.814318Z"
+     "end_time": "2025-11-06T17:58:32.795750Z",
+     "start_time": "2025-11-06T17:58:32.601957Z"
     }
    },
    "cell_type": "code",
@@ -90,35 +90,36 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:23:20.611469Z",
-     "start_time": "2025-11-06T17:23:20.506417Z"
+     "end_time": "2025-11-06T17:59:06.046014Z",
+     "start_time": "2025-11-06T17:58:32.803278Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# There's a lot of columns so only take what is needed and pre-filter\n",
     "query = \"\"\"\n",
     "        SELECT fdc_id,\n",
     "               ingredients\n",
     "        FROM usda_2022_branded_food_product\n",
     "        WHERE fdc_id IS NOT NULL\n",
-    "          AND ingredients IS NOT NULL LIMIT 500; \\\n",
+    "          AND ingredients IS NOT NULL; \\\n",
     "        \"\"\"\n",
     "df = pd.read_sql(query, engine)"
    ],
    "id": "3341dcef91ea8adc",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:23:22.940519Z",
-     "start_time": "2025-11-06T17:23:22.937059Z"
+     "end_time": "2025-11-06T17:59:06.059920Z",
+     "start_time": "2025-11-06T17:59:06.057722Z"
     }
    },
    "cell_type": "code",
@@ -131,18 +132,18 @@
        "Index(['fdc_id', 'ingredients'], dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:42:20.176099Z",
-     "start_time": "2025-11-06T16:42:20.174263Z"
+     "end_time": "2025-11-06T17:59:06.068664Z",
+     "start_time": "2025-11-06T17:59:06.066559Z"
     }
    },
    "cell_type": "code",
@@ -152,171 +153,62 @@
     {
      "data": {
       "text/plain": [
-       "2231142"
+       "1702125"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:46:54.281445Z",
-     "start_time": "2025-11-06T16:46:26.900538Z"
+     "end_time": "2025-11-06T17:59:07.704131Z",
+     "start_time": "2025-11-06T17:59:06.075898Z"
     }
    },
    "cell_type": "code",
-   "source": "df.to_csv(\"data/usda_2022_branded_food_product.csv\", index=False)  # save entire database",
+   "source": "sorted_df = df.sort_values(by=[\"fdc_id\", \"ingredients\"])  # sort by id because looks nice",
+   "id": "b0b58147ce24d83",
+   "outputs": [],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T18:01:39.783715Z",
+     "start_time": "2025-11-06T18:01:35.094445Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sorted_df.to_csv(\"data/usda_2022_branded_food_product_INGREDIENTS_ONLY.csv\", index=False)  # save database",
    "id": "2661eff38d624e1e",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:59:01.342581Z",
-     "start_time": "2025-11-06T16:59:01.184242Z"
+     "end_time": "2025-11-06T17:59:12.261246Z",
+     "start_time": "2025-11-06T17:59:12.258327Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "filtered_df = df[[\"fdc_id\", \"ingredients\"]].sort_values(by=[\"id\"])  # get only id and ingredients\n",
-    "filtered_df.head()"
-   ],
-   "id": "b67cda3719ec6cc1",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     id                                        ingredients\n",
-       "443   0  [1 c. firmly packed brown sugar, 1/2 c. evapor...\n",
-       "444   1  [1 small jar chipped beef, cut up, 4 boned chi...\n",
-       "445   2  [2 (16 oz.) pkg. frozen corn, 1 (8 oz.) pkg. c...\n",
-       "446   3  [1 large whole chicken, 2 (10 1/2 oz.) cans ch...\n",
-       "447   4  [1 c. peanut butter, 3/4 c. graham cracker cru..."
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>ingredients</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>0</td>\n",
-       "      <td>[1 c. firmly packed brown sugar, 1/2 c. evapor...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>444</th>\n",
-       "      <td>1</td>\n",
-       "      <td>[1 small jar chipped beef, cut up, 4 boned chi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>445</th>\n",
-       "      <td>2</td>\n",
-       "      <td>[2 (16 oz.) pkg. frozen corn, 1 (8 oz.) pkg. c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>446</th>\n",
-       "      <td>3</td>\n",
-       "      <td>[1 large whole chicken, 2 (10 1/2 oz.) cans ch...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>447</th>\n",
-       "      <td>4</td>\n",
-       "      <td>[1 c. peanut butter, 3/4 c. graham cracker cru...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 16
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T16:59:37.041567Z",
-     "start_time": "2025-11-06T16:59:29.066104Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "filtered_df.to_csv(\"data/usda_2022_branded_food_product_ingredients.csv\", index=False)  # save only id and ingredients",
-   "id": "ef7dda2fbc790328",
-   "outputs": [],
-   "execution_count": 17
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T16:59:59.736897Z",
-     "start_time": "2025-11-06T16:59:59.733765Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "len(filtered_df)",
-   "id": "5760213d24b480d3",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2231142"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 18
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T17:08:44.253282Z",
-     "start_time": "2025-11-06T17:08:44.246618Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "filtered_df.tail(5)  # note ids are sorted",
+   "source": "sorted_df.tail(5)  # note ids are sorted",
    "id": "48722f4de0d0de2",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "              id                                        ingredients\n",
-       "279      2231137  [1/2 cup chocolate hazelnut spread (recommende...\n",
-       "1948712  2231138  [1 dozen eggs, 1 paprika, 1 salt and pepper to...\n",
-       "1948713  2231139  [150 grams Daikon radish, 1 tbsp Sesame oil, 1...\n",
-       "1948714  2231140  [1 cup apple cider, 6 tablespoons sugar, 4 tab...\n",
-       "1948716  2231141  [1 pound ground veal, 1/2 pound sweet Italian ..."
+       "         fdc_id                                        ingredients\n",
+       "144015  2340755  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
+       "144016  2340756  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
+       "144017  2340757  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
+       "144018  2340758  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
+       "144019  2340759  COLOMBIAN COFFEE, MILK PROTEIN ISOLATE, COCOA ..."
       ],
       "text/html": [
        "<div>\n",
@@ -337,55 +229,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
+       "      <th>fdc_id</th>\n",
        "      <th>ingredients</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>279</th>\n",
-       "      <td>2231137</td>\n",
-       "      <td>[1/2 cup chocolate hazelnut spread (recommende...</td>\n",
+       "      <th>144015</th>\n",
+       "      <td>2340755</td>\n",
+       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1948712</th>\n",
-       "      <td>2231138</td>\n",
-       "      <td>[1 dozen eggs, 1 paprika, 1 salt and pepper to...</td>\n",
+       "      <th>144016</th>\n",
+       "      <td>2340756</td>\n",
+       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1948713</th>\n",
-       "      <td>2231139</td>\n",
-       "      <td>[150 grams Daikon radish, 1 tbsp Sesame oil, 1...</td>\n",
+       "      <th>144017</th>\n",
+       "      <td>2340757</td>\n",
+       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1948714</th>\n",
-       "      <td>2231140</td>\n",
-       "      <td>[1 cup apple cider, 6 tablespoons sugar, 4 tab...</td>\n",
+       "      <th>144018</th>\n",
+       "      <td>2340758</td>\n",
+       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1948716</th>\n",
-       "      <td>2231141</td>\n",
-       "      <td>[1 pound ground veal, 1/2 pound sweet Italian ...</td>\n",
+       "      <th>144019</th>\n",
+       "      <td>2340759</td>\n",
+       "      <td>COLOMBIAN COFFEE, MILK PROTEIN ISOLATE, COCOA ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 25
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-06T17:59:12.391062Z",
+     "start_time": "2025-11-06T17:59:12.389512Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "a638849d0171c4e1"
+   "id": "a638849d0171c4e1",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
