--- a/process_branded_food_product.ipynb
+++ b/process_branded_food_product.ipynb
@@ -7,7 +7,12 @@
    "id": "5bcd2d4a58af6727"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-07T04:22:34.980422Z",
+     "start_time": "2025-11-07T04:22:34.978012Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# !pip install --upgrade pip -q\n",
@@ -18,7 +23,7 @@
    ],
    "id": "8565f315e8ce74cb",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -26,8 +31,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:51:33.788076Z",
-     "start_time": "2025-11-07T02:51:33.059345Z"
+     "end_time": "2025-11-07T04:22:35.669040Z",
+     "start_time": "2025-11-07T04:22:34.983760Z"
     }
    },
    "source": [
@@ -52,13 +57,13 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:51:35.218833Z",
-     "start_time": "2025-11-07T02:51:35.216665Z"
+     "end_time": "2025-11-07T04:22:35.674687Z",
+     "start_time": "2025-11-07T04:22:35.673049Z"
     }
    },
    "cell_type": "code",
@@ -80,13 +85,13 @@
    ],
    "id": "9e27b1819da1fd42",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:51:35.856543Z",
-     "start_time": "2025-11-07T02:51:35.854675Z"
+     "end_time": "2025-11-07T04:22:35.683396Z",
+     "start_time": "2025-11-07T04:22:35.677423Z"
     }
    },
    "cell_type": "code",
@@ -101,26 +106,26 @@
    ],
    "id": "3341dcef91ea8adc",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:51:38.886437Z",
-     "start_time": "2025-11-07T02:51:36.611369Z"
+     "end_time": "2025-11-07T04:22:37.931129Z",
+     "start_time": "2025-11-07T04:22:35.686044Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv(\"data/usda_2022_branded_food_product_INGREDIENTS_ONLY.csv\")",
    "id": "e9a0b822a43439df",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:51:38.904569Z",
-     "start_time": "2025-11-07T02:51:38.899397Z"
+     "end_time": "2025-11-07T04:22:38.052998Z",
+     "start_time": "2025-11-07T04:22:38.048452Z"
     }
    },
    "cell_type": "code",
@@ -191,18 +196,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:51:58.260969Z",
-     "start_time": "2025-11-07T02:51:38.925612Z"
+     "end_time": "2025-11-07T04:22:56.479406Z",
+     "start_time": "2025-11-07T04:22:38.079376Z"
     }
    },
    "cell_type": "code",
@@ -220,33 +225,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote part_344614_344623.csv (0:10) — checkpoint=344623\n",
-      "Wrote part_344624_344633.csv (10:20) — checkpoint=344633\n",
-      "Wrote part_344634_344643.csv (20:30) — checkpoint=344643\n",
+      "Wrote part_344644_344653.csv (0:10) — checkpoint=344653\n",
+      "Wrote part_344654_344663.csv (10:20) — checkpoint=344663\n",
+      "Wrote part_344664_344673.csv (20:30) — checkpoint=344673\n",
       "Done.\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:52:23.306541Z",
-     "start_time": "2025-11-07T02:52:23.280921Z"
+     "end_time": "2025-11-07T04:22:56.539501Z",
+     "start_time": "2025-11-07T04:22:56.510255Z"
     }
    },
    "cell_type": "code",
    "source": "final_df = assemble_branded_food_product_df()",
    "id": "4cd2360f0d7a4607",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:52:24.459156Z",
-     "start_time": "2025-11-07T02:52:24.456800Z"
+     "end_time": "2025-11-07T04:22:56.549428Z",
+     "start_time": "2025-11-07T04:22:56.547242Z"
     }
    },
    "cell_type": "code",
@@ -256,21 +261,21 @@
     {
      "data": {
       "text/plain": [
-       "40"
+       "70"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:52:49.394527Z",
-     "start_time": "2025-11-07T02:52:49.390477Z"
+     "end_time": "2025-11-07T04:22:56.559309Z",
+     "start_time": "2025-11-07T04:22:56.555999Z"
     }
    },
    "cell_type": "code",
@@ -286,13 +291,13 @@
    ],
    "id": "f05817a977a60f2e",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T02:52:50.852786Z",
-     "start_time": "2025-11-07T02:52:50.848614Z"
+     "end_time": "2025-11-07T04:22:56.571816Z",
+     "start_time": "2025-11-07T04:22:56.568718Z"
     }
    },
    "cell_type": "code",
@@ -303,11 +308,11 @@
      "data": {
       "text/plain": [
        "    fdc_id                             ingredients_normalized\n",
-       "35  344639  \"['flour', 'sugar', 'vegetable oil', 'high fru...\n",
-       "36  344640  \"['flour', 'sugar', 'soybean', 'palm oil', 'de...\n",
-       "37  344641  \"['corn flour', 'sugar', 'wheat flour', 'oat f...\n",
-       "38  344642  \"['wheat', 'rice', 'sugar', 'corn', 'wheat bra...\n",
-       "39  344643  \"['flour', 'corn syrup', 'high fructose corn s..."
+       "65  344669  \"['flour', 'soybean oil', 'palm oil', 'cheese'...\n",
+       "66  344670  \"['flour', 'soybean oil', 'palm oil', 'cheese'...\n",
+       "67  344671  \"['flour', 'oil', 'cheese', 'salt', 'paprika',...\n",
+       "68  344672  \"['flour', 'soybean oil', 'palm oil', 'cheese'...\n",
+       "69  344673  \"['flour', 'soybean oil', 'palm oil', 'cheese'..."
       ],
       "text/html": [
        "<div>\n",
@@ -334,44 +339,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>344639</td>\n",
-       "      <td>\"['flour', 'sugar', 'vegetable oil', 'high fru...</td>\n",
+       "      <th>65</th>\n",
+       "      <td>344669</td>\n",
+       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>344640</td>\n",
-       "      <td>\"['flour', 'sugar', 'soybean', 'palm oil', 'de...</td>\n",
+       "      <th>66</th>\n",
+       "      <td>344670</td>\n",
+       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>344641</td>\n",
-       "      <td>\"['corn flour', 'sugar', 'wheat flour', 'oat f...</td>\n",
+       "      <th>67</th>\n",
+       "      <td>344671</td>\n",
+       "      <td>\"['flour', 'oil', 'cheese', 'salt', 'paprika',...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>344642</td>\n",
-       "      <td>\"['wheat', 'rice', 'sugar', 'corn', 'wheat bra...</td>\n",
+       "      <th>68</th>\n",
+       "      <td>344672</td>\n",
+       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>344643</td>\n",
-       "      <td>\"['flour', 'corn syrup', 'high fructose corn s...</td>\n",
+       "      <th>69</th>\n",
+       "      <td>344673</td>\n",
+       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-07T04:22:56.595747Z",
+     "start_time": "2025-11-07T04:22:56.594618Z"
+    }
+   },
    "cell_type": "code",
    "source": "",
    "id": "5d8d66f64f64812c",
