--- a/process_food_branded_experimental.ipynb
+++ b/process_food_branded_experimental.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:34.980422Z",
-     "start_time": "2025-11-07T04:22:34.978012Z"
+     "end_time": "2025-11-07T04:51:36.343113Z",
+     "start_time": "2025-11-07T04:51:36.340945Z"
     }
    },
    "cell_type": "code",
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:35.669040Z",
-     "start_time": "2025-11-07T04:22:34.983760Z"
+     "end_time": "2025-11-07T04:51:36.995341Z",
+     "start_time": "2025-11-07T04:51:36.345507Z"
     }
    },
    "source": [
@@ -42,7 +42,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from util import process_branded_food_product_df, assemble_branded_food_product_df\n",
+    "from util import process_branded_food_experimental_df, assemble_branded_food_experimental_df\n",
     "\n",
     "# from sqlalchemy import create_engine\n",
     "\n",
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:35.674687Z",
-     "start_time": "2025-11-07T04:22:35.673049Z"
+     "end_time": "2025-11-07T04:51:37.000229Z",
+     "start_time": "2025-11-07T04:51:36.998508Z"
     }
    },
    "cell_type": "code",
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:35.683396Z",
-     "start_time": "2025-11-07T04:22:35.677423Z"
+     "end_time": "2025-11-07T04:51:37.010932Z",
+     "start_time": "2025-11-07T04:51:37.002332Z"
     }
    },
    "cell_type": "code",
@@ -111,12 +111,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:37.931129Z",
-     "start_time": "2025-11-07T04:22:35.686044Z"
+     "end_time": "2025-11-07T04:51:37.535538Z",
+     "start_time": "2025-11-07T04:51:37.013098Z"
     }
    },
    "cell_type": "code",
-   "source": "df = pd.read_csv(\"data/usda_2022_branded_food_product_INGREDIENTS_ONLY.csv\")",
+   "source": "df = pd.read_csv(\"data/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")",
    "id": "e9a0b822a43439df",
    "outputs": [],
    "execution_count": 5
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:38.052998Z",
-     "start_time": "2025-11-07T04:22:38.048452Z"
+     "end_time": "2025-11-07T04:51:37.547960Z",
+     "start_time": "2025-11-07T04:51:37.541403Z"
     }
    },
    "cell_type": "code",
@@ -135,12 +135,12 @@
     {
      "data": {
       "text/plain": [
-       "   fdc_id                                        ingredients\n",
-       "0  344604  Tomatoes, Tomato Juice, Less Than 2% Of: Salt,...\n",
-       "1  344605  Tomatoes, Tomato Juice, Less Than 2% Of: Salt,...\n",
-       "2  344606                    White Turkey, Natural Flavoring\n",
-       "3  344607                   Turkey Breast, Natural Flavoring\n",
-       "4  344608                         Turkey, natural Flavoring."
+       "   fdc_id                                        description\n",
+       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...\n",
+       "1  167513  Pillsbury, Cinnamon Rolls with Icing, refriger...\n",
+       "2  167514  Kraft Foods, Shake N Bake Original Recipe, Coa...\n",
+       "3  167515     George Weston Bakeries, Thomas English Muffins\n",
+       "4  167516         Waffles, buttermilk, frozen, ready-to-heat"
       ],
       "text/html": [
        "<div>\n",
@@ -162,34 +162,34 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>fdc_id</th>\n",
-       "      <th>ingredients</th>\n",
+       "      <th>description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>344604</td>\n",
-       "      <td>Tomatoes, Tomato Juice, Less Than 2% Of: Salt,...</td>\n",
+       "      <td>167512</td>\n",
+       "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>344605</td>\n",
-       "      <td>Tomatoes, Tomato Juice, Less Than 2% Of: Salt,...</td>\n",
+       "      <td>167513</td>\n",
+       "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>344606</td>\n",
-       "      <td>White Turkey, Natural Flavoring</td>\n",
+       "      <td>167514</td>\n",
+       "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>344607</td>\n",
-       "      <td>Turkey Breast, Natural Flavoring</td>\n",
+       "      <td>167515</td>\n",
+       "      <td>George Weston Bakeries, Thomas English Muffins</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>344608</td>\n",
-       "      <td>Turkey, natural Flavoring.</td>\n",
+       "      <td>167516</td>\n",
+       "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -206,17 +206,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:56.479406Z",
-     "start_time": "2025-11-07T04:22:38.079376Z"
+     "end_time": "2025-11-07T04:51:41.727898Z",
+     "start_time": "2025-11-07T04:51:37.572108Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "process_branded_food_product_df(\n",
+    "process_branded_food_experimental_df(\n",
     "    df=df,\n",
     "    model=\"qwen/qwen3-4b-2507\",\n",
     "    client=client,\n",
-    "    batch_size=10,\n",
+    "    batch_size=100,\n",
+    "    restart=True\n",
     ")"
    ],
    "id": "80690d7c926fbade",
@@ -225,9 +226,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote part_344644_344653.csv (0:10) — checkpoint=344653\n",
-      "Wrote part_344654_344663.csv (10:20) — checkpoint=344663\n",
-      "Wrote part_344664_344673.csv (20:30) — checkpoint=344673\n",
+      "Wrote part_167512_167521.csv (0:10) — checkpoint=167521\n",
+      "Wrote part_167522_167531.csv (10:20) — checkpoint=167531\n",
+      "Wrote part_167532_167541.csv (20:30) — checkpoint=167541\n",
       "Done.\n"
      ]
     }
@@ -237,12 +238,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:56.539501Z",
-     "start_time": "2025-11-07T04:22:56.510255Z"
+     "end_time": "2025-11-07T04:51:41.809222Z",
+     "start_time": "2025-11-07T04:51:41.789901Z"
     }
    },
    "cell_type": "code",
-   "source": "final_df = assemble_branded_food_product_df()",
+   "source": "final_df = assemble_branded_food_experimental_df()",
    "id": "4cd2360f0d7a4607",
    "outputs": [],
    "execution_count": 8
@@ -250,8 +251,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:56.549428Z",
-     "start_time": "2025-11-07T04:22:56.547242Z"
+     "end_time": "2025-11-07T04:51:41.822636Z",
+     "start_time": "2025-11-07T04:51:41.820411Z"
     }
    },
    "cell_type": "code",
@@ -261,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "70"
+       "60"
       ]
      },
      "execution_count": 9,
@@ -274,8 +275,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:56.559309Z",
-     "start_time": "2025-11-07T04:22:56.555999Z"
+     "end_time": "2025-11-07T04:51:41.831651Z",
+     "start_time": "2025-11-07T04:51:41.826389Z"
     }
    },
    "cell_type": "code",
@@ -283,11 +284,12 @@
     "# CSV can’t store native Python lists (they are objects), so use JSON dump\n",
     "product_table = pd.DataFrame({\n",
     "    \"fdc_id\": final_df[\"fdc_id\"],\n",
-    "    \"ingredients_normalized\": final_df[\"ingredients_normalized\"].apply(json.dumps),\n",
+    "    \"description\": final_df[\"description\"],\n",
+    "    \"mapped_ingredient\": final_df[\"mapped_ingredient\"].apply(json.dumps),\n",
     "}).sort_values(\"fdc_id\")\n",
     "# Create directory if it doesn't exist and save\n",
     "os.makedirs(\"sample\", exist_ok=True)\n",
-    "product_table.to_csv(\"sample/branded_food_product_ingredients_normalized.csv\", index=False)"
+    "product_table.to_csv(\"sample/food_branded_experimental_normalized.csv\", index=False)"
    ],
    "id": "f05817a977a60f2e",
    "outputs": [],
@@ -296,23 +298,23 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:56.571816Z",
-     "start_time": "2025-11-07T04:22:56.568718Z"
+     "end_time": "2025-11-07T04:51:41.839621Z",
+     "start_time": "2025-11-07T04:51:41.835405Z"
     }
    },
    "cell_type": "code",
-   "source": "product_table.tail()",
+   "source": "product_table.head()",
    "id": "2661eff38d624e1e",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "    fdc_id                             ingredients_normalized\n",
-       "65  344669  \"['flour', 'soybean oil', 'palm oil', 'cheese'...\n",
-       "66  344670  \"['flour', 'soybean oil', 'palm oil', 'cheese'...\n",
-       "67  344671  \"['flour', 'oil', 'cheese', 'salt', 'paprika',...\n",
-       "68  344672  \"['flour', 'soybean oil', 'palm oil', 'cheese'...\n",
-       "69  344673  \"['flour', 'soybean oil', 'palm oil', 'cheese'..."
+       "   fdc_id                                        description mapped_ingredient\n",
+       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...         \"biscuit\"\n",
+       "1  167513  Pillsbury, Cinnamon Rolls with Icing, refriger...  \"cinnamon rolls\"\n",
+       "2  167514  Kraft Foods, Shake N Bake Original Recipe, Coa...    \"bread crumbs\"\n",
+       "3  167515     George Weston Bakeries, Thomas English Muffins  \"english muffin\"\n",
+       "4  167516         Waffles, buttermilk, frozen, ready-to-heat         \"waffles\""
       ],
       "text/html": [
        "<div>\n",
@@ -334,34 +336,40 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>fdc_id</th>\n",
-       "      <th>ingredients_normalized</th>\n",
+       "      <th>description</th>\n",
+       "      <th>mapped_ingredient</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>344669</td>\n",
-       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>167512</td>\n",
+       "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
+       "      <td>\"biscuit\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>344670</td>\n",
-       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>167513</td>\n",
+       "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
+       "      <td>\"cinnamon rolls\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>344671</td>\n",
-       "      <td>\"['flour', 'oil', 'cheese', 'salt', 'paprika',...</td>\n",
+       "      <th>2</th>\n",
+       "      <td>167514</td>\n",
+       "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
+       "      <td>\"bread crumbs\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>344672</td>\n",
-       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
+       "      <th>3</th>\n",
+       "      <td>167515</td>\n",
+       "      <td>George Weston Bakeries, Thomas English Muffins</td>\n",
+       "      <td>\"english muffin\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>344673</td>\n",
-       "      <td>\"['flour', 'soybean oil', 'palm oil', 'cheese'...</td>\n",
+       "      <th>4</th>\n",
+       "      <td>167516</td>\n",
+       "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
+       "      <td>\"waffles\"</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -378,8 +386,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T04:22:56.595747Z",
-     "start_time": "2025-11-07T04:22:56.594618Z"
+     "end_time": "2025-11-07T04:51:41.860658Z",
+     "start_time": "2025-11-07T04:51:41.859040Z"
     }
    },
    "cell_type": "code",
