--- a/unique_ingredients.ipynb
+++ b/unique_ingredients.ipynb
@@ -34,7 +34,7 @@
     "# Parse the JSON-style ingredient lists\n",
     "df[\"ingredients_normalized\"] = df[\"ingredients_normalized\"].apply(json.loads)\n",
     "\n",
-    "# Ensure they're lists (if needed)\n",
+    "# Ensure they're lists\n",
     "df[\"ingredients_list\"] = df[\"ingredients_normalized\"].apply(\n",
     "    lambda x: ast.literal_eval(str(x)) if isinstance(x, str) else x\n",
     ")\n",
